# email

./: .gitignore  API_SETUP.md  GMAIL_OAUTH_SETUP.md  INTEGRATION_SUMMARY.md  README.md  build.sh
backend/: CMakeLists.txt
backend/include/: account_integration.h  auth.h  config.h  database.h  encryption.h  group_chat.h  json_parser.h  message_handler.h  server.h  user_manager.h  websocket_handler.h
backend/src/: account_integration.cpp  auth.cpp  config.cpp  database.cpp  encryption.cpp  group_chat.cpp  json_parser.cpp  main.cpp  message_handler.cpp  server.cpp  user_manager.cpp  websocket_handler.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatWindow.tsx  GroupInvitations.tsx  Modal.tsx  Sidebar.tsx  UnifiedMessageList.tsx  UserProfileModal.tsx
frontend/src/pages/: AccountIntegration.tsx  BackupManager.tsx  Login.tsx  Messenger.tsx  Register.tsx  UnifiedInbox.tsx
frontend/src/services/: accountIntegrationService.ts
frontend/src/stores/: authStore.ts
